--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "myreactapp",
+  "homepage": ".",
+  "name": "spacexnumbers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
