--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.7",
+    "lottie-react": "^2.4.0",
     "papaparse": "^5.4.1",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
