--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.4.1",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.7",
     "lottie-react": "^2.4.0",
